# CSC433_Assignment_01

./: CMakeLists.txt  README.md  main.cpp  survey.txt
data/: README.txt  cornell_box.ppm  cornell_box_hdr.ppm  dragon.ppm  teapot.ppm
